# stander_monlothic_rust

./: .dockerignore  .env.example  Cargo.toml  Dockerfile  README.md  build.rs  diesel.toml  docker-compose.prod.yml  docker-compose.yml
.github/workflows/: rust.yml
migrations/2024-01-14-000001_create_initial_schema/: down.sql  up.sql
scripts/: init-db.sql  init-mongo.js
src/: lib.rs  main  main.rs  schema.rs
src/cloud/: aws.rs  huawei.rs  mod.rs
src/common/: memory.rs  mod.rs  response.rs
src/config/: mod.rs
src/database/: mod.rs  mongodb.rs  postgres.rs
src/grpc/: conversions.rs  mod.rs  proto.rs  services.rs  user_services.rs
src/models/: common.rs  db_models.rs  mod.rs  mongo_models.rs  user.rs
src/proto/: user-services.proto
src/rest/: mod.rs
src/rest/handlers/: health.rs  mod.rs  user.rs
src/rest/middleware/: auth.rs  cors.rs  logging.rs  mod.rs
src/rest/routes/: mod.rs  v1.rs
src/services/: auth_service.rs  mod.rs  photo_service.rs  user_service.rs
src/utils/: date_time.rs  encryption.rs  error.rs  mod.rs  validation.rs
