[package]
name = "stander_monlothic_rust"
version = "0.1.0"
edition = "2021"

[dependencies]
# Async runtime
tokio = { version = "1.0", features = ["full"] }

# gRPC
tonic = "0.10"
tonic-build = "0.10"
prost = "0.12"
prost-types = "0.12"

# REST API
axum = "0.7"
axum-extra = { version = "0.9", features = ["typed-header"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
hyper = "1.0"
clap = { version = "4.0", features = ["derive"] }
futures = "0.3"

# Database - PostgreSQL (using Diesel ORM - Rust equivalent of GORM)
diesel = { version = "2.1", features = ["postgres", "chrono", "uuid", "r2d2"] }
diesel_migrations = "2.1"

# Database - MongoDB
mongodb = "2.8"

# AWS SDK
aws-config = "1.0"
aws-sdk-s3 = "1.0"
aws-sdk-dynamodb = "1.0"
aws-sdk-lambda = "1.0"

# HTTP client for Huawei Cloud API calls
reqwest = { version = "0.11", features = ["json"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Authentication
bcrypt = "0.15"
jsonwebtoken = "9.2"

# Configuration
config = "0.14"
dotenvy = "0.15"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Utilities
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
regex = "1.0"
rand = "0.8"
sha2 = "0.10"
base64 = "0.21"

[build-dependencies]
tonic-build = "0.10"
